# Periscope

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md
backend/: .env  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 10400fbbe32d_add_relevance_threshold_boost_factor.py  1e9bf615540f_add_core_data_model.py  67737008d427_create_core_tables.py  c43b8a7e57bc_add_rss_validation_fields_to_.py
backend/app/: config.py  database.py  exceptions.py  main.py  middlewares.py
backend/app/api/: auth.py  basic.py  digest.py  health.py  users.py
backend/app/dtos/: __init__.py  auth.py  base.py  config.py  digest.py  mappers.py  user.py
backend/app/models/: __init__.py  base.py  users.py
backend/app/processors/: ai_provider.py  normalizer.py  quality_scorer.py  relevance_scorer.py  similarity_detector.py  summarizer.py  (+2 more)
backend/docs/: architecture.md  configuration.md  content-processing.md  current_plan.md  database-design.md  design-patterns.md  docker-setup.md  index.md  normalize.md  operations.md  quality_scorer.md  relevence-scoring.md  summarizer.md  temporal-workflows.md  test_coverage_enhancement_plan.md  test_coverage_implementation_guide.md  testing-strategy.md
backend/examples/: summarizer_example.py
backend/scripts/: README_TEST_ASSEMBLY.md  test_assembly.py  test_brevo.py  test_rss_fetcher.py  update_coverage_badge.py
backend/temporal-config/: README.md  development-sql.yaml
backend/tests/: conftest.py  test_main.py
(+142 files in other folders)
